fix: solve logo resize on collapse state

--- a/src/components/navigation/main/navigation-item/NavigationItem.scss
+++ b/src/components/navigation/main/navigation-item/NavigationItem.scss
@@ -100,7 +100,9 @@
         }
 
         &-fullSize {
-            width: 100%;
+            &:not(#{$navigationItem}--is-collapsed) {
+                width: 100%;
+            }
         }
     }
 
