--- a/src/components/widgets/main-navigation/MainNavigation.scss
+++ b/src/components/widgets/main-navigation/MainNavigation.scss
@@ -1,15 +1,35 @@
 .main-navigation {
-    width: var(--spacing-131);
 
-    &--list-item, &--list-item-minimize {
-        > button {
-            width: 100%;
+    &__list {
+        display: inline-flex;
+        flex-direction: column;
+        max-width: var(--spacing-131);
+
+        > li {
+            &:last-child {
+                border-top: 1px solid var(--color-primary-30, #000);
+            }
         }
     }
 
-    &--list-item-minimize {
-        > button {
-            box-shadow: inset 0 var(--spacing-10, 0) 0 var(--color-primary-40, #000);
+    &__logo {
+        display: flex;
+        justify-content: center;
+        padding: var(--spacing-40, 0) 0;
+
+        background: var(--color-neutral-10, #000);
+    }
+
+    &--has-image {
+        max-width: 100%;
+
+        &:is(figure) {
+            padding: 0;
+            margin: 0;
+        }
+
+        > img {
+            width: inherit;
         }
     }
 }
